--- a/P009110.opf/layers/v001/Pagination.yml
+++ b/P009110.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b4df9607c39d4f9e8fb46459d3916233
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   ac362f87de3f447fa5e1e5f379bce14a:
