--- a/P009110.opf/meta.yml
+++ b/P009110.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009110
 initial_creation_type: ocr
 created_at: 22/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:23:29.040215
 source_metadata:
   id: bdr:W1KG2740
   title: པེནཐོཨུསེ་ཨོཕ༹་ཐེ་གོདས
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 427
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
